[package]
name = "expire-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
dashmap = "5.4.0"
futures = "0.3.28"
tokio-util = { version = "0.7.8", features = ["time"] }